--- a/static/scss/waltz.scss
+++ b/static/scss/waltz.scss
@@ -12,7 +12,7 @@
     position: fixed;
     top: 30px;
     right: 30px;
-    z-index: 9999;
+    z-index: $z-index-1st;
 
     width: $size;
     height: $size;
@@ -29,7 +29,7 @@
         background-size: 64px;
         cursor: pointer;
         background-position: center;
-        z-index: 9999;
+        z-index: $z-index-1st;
 
 
         -webkit-transition: .5s;
